# start-up-validator

./: .gitignore  README.md  final_report.md  morethings_todo.txt  pyproject.toml
src/validator/: crew.py  main.py
src/validator/config/: agents.yaml  tasks.yaml
