[project]
name = "validator"
version = "0.1.0"
description = "validator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4"
]

[project.scripts]
validator = "validator.main:run"
run_crew = "validator.main:run"
train = "validator.main:train"
replay = "validator.main:replay"
test = "validator.main:test"
run_with_trigger = "validator.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
